--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "socket.io-client": "^4.8.1",
+        "bcryptjs": "^2.4.3",
         "tailwind-merge": "^2.5.4",
         "zod": "^3.23.8"
     },
@@ -35,6 +36,8 @@
         "@types/react": "^18.3.12",
         "@types/react-dom": "^18.3.1",
         "autoprefixer": "^10.4.20",
+        "bcryptjs": "^2.4.3",
+        "@types/bcryptjs": "^2.4.6",
         "eslint": "^8.57.1",
         "eslint-config-next": "14.2.18",
         "postcss": "^8.4.47",
